my first commit

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Git</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<h1>Git</h1>
 	<p>eklf eklf lke</p>
+	<p>eklf eklf lke</p>
+	<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Lorem, несколько маленькая если прямо которой коварный, заголовок вопроса пояс дороге даже по всей имеет буквоград. Маленький домах своего всемогущая путь.</p>
+	<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Lorem, несколько маленькая если прямо которой коварный, заголовок вопроса пояс дороге даже по всей имеет буквоград. Маленький домах своего всемогущая путь.</p>
 </body>
 </html>
